--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -67,7 +67,7 @@
 
                 <a href="#" class="inline-flex hover:text-red-500 flex-shrink-0">
                     <span class="ml-[2px] hidden lg:block">
-                        중고도서
+                        Book U Luv Reader
                     </span>
                 </a>
             </div>
@@ -99,13 +99,6 @@
                 </span>
             </a>
 
-            <a href="/member/logout" class="inline-flex flex-shrink-0" sec:authorize="isAuthenticated()">
-                <i class="fa-solid fa-arrow-right-from-bracket"></i>
-                <span class="ml-[2px]">
-                    로그아웃
-                </span>
-            </a>
-
             <a href="/member/profile" class="inline-flex items-center" sec:authorize="isAuthenticated()">
                 <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" th:if="${#authentication.principal.imgFilePath}" th:src="${#authentication.principal.imgFilePath}"/>
                 <img class="fa-solid fa-user w-12 h-12 rounded-full" alt="" src="https://mblogthumb-phinf.pstatic.net/MjAyMDExMDFfMyAg/MDAxNjA0MjI5NDA4NDMy.5zGHwAo_UtaQFX8Hd7zrDi1WiV5KrDsPHcRzu3e6b8Eg.IlkR3QN__c3o7Qe9z5_xYyCyr2vcx7L_W1arNFgwAJwg.JPEG.gambasg/%EC%9C%A0%ED%8A%9C%EB%B8%8C_%EA%B8%B0%EB%B3%B8%ED%94%84%EB%A1%9C%ED%95%84_%ED%8C%8C%EC%8A%A4%ED%85%94.jpg?type=w800"
@@ -124,20 +117,21 @@
 
             <a href="#" class="inline-flex flex-shrink-0">
                 <span class="ml-[2px]">
-                    메뉴 2
+                    장바구니
                 </span>
             </a>
 
-            <a href="#" class="inline-flex flex-shrink-0">
+            <a href="/member/logout" class="inline-flex flex-shrink-0" sec:authorize="isAuthenticated()">
+                <i class="fa-solid fa-arrow-right-from-bracket"></i>
                 <span class="ml-[2px]">
-                    장바구니
+                    로그아웃
                 </span>
             </a>
         </div>
     </div>
 </header>
 
-<div class="flex-grow flex flex-col py-5">
+<div class="flex-grow flex flex-col py-32">
     <main layout:fragment="content" class="flex-grow flex flex-col"></main>
 </div>
 
@@ -148,12 +142,12 @@
                 <div>
                     <img class="w-[100px]" src="https://i.imgur.com/9qCFLjc.png"  alt="">
                 </div>
-                <div class="ml-[20px]">
+                <div class="ml-[20px] text-white">
                     <div class="mb-[10px]">
                         <span>고우영</span>
                     </div>
                     <div class="mb-[10px]">
-                        <span>이메일 : wooyoung0407@naver.com</span>
+                        <span>wooyoung0407@naver.com</span>
                     </div>
                     <div class="mb-[10px]">
                         <span>Front/React</span>
@@ -163,16 +157,16 @@
                     </div>
                 </div>
             </div>
-            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
+            <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around mx-[10px]">
                 <div>
                     <img class="w-[100px]" src="https://i.imgur.com/EgByDhq.jpg"  alt="">
                 </div>
-                <div class="ml-[20px]">
+                <div class="ml-[20px] text-white">
                     <div class="mb-[10px]">
                         <span>박창규</span>
                     </div>
                     <div class="mb-[10px]">
-                        <span>이메일 : wooyoung0407@naver.com</span>
+                        <span>wooyoung0407@naver.com</span>
                     </div>
                     <div class="mb-[10px]">
                         <span>박창규</span>
@@ -187,12 +181,12 @@
                 <div>
                     <img class="w-[100px]" src="https://i.imgur.com/Q42WfBv.png"  alt="">
                 </div>
-                <div class="ml-[20px]">
+                <div class="ml-[20px] text-white">
                     <div class="mb-[10px]">
                         <span>황인성</span>
                     </div>
                     <div class="mb-[10px]">
-                        <span>이메일 : wooyoung0407@naver.com</span>
+                        <span>wooyoung0407@naver.com</span>
                     </div>
                     <div class="mb-[10px]">
                         <span>황인성</span>
