1차배포중 main 템플릿 configured Template Resolvers 문제해결중

--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -45,20 +45,20 @@
         <div class="login-logo flex mt-[20px] justify-between">
             <div class="w-1/3">
                 <div class="logo" id="login-kakao">
-                    <a href="http://localhost:7070/oauth2/authorization/kakao">
+                    <a href="https://www.bookuluv.devh.me/oauth2/authorization/kakao">
                         <img class="w-[80px] h-[80px]" th:src="@{/image/login_kakao.png}" alt="">
                     </a>
                 </div>
             </div>
             <div class="w-1/3 mx-[60px]">
                 <div class="logo" id="login-naver">
-                    <a href="http://localhost:7070/oauth2/authorization/naver">
+                    <a href="https://www.bookuluv.devh.me/oauth2/authorization/naver">
                         <img class="w-[80px] h-[80px]" th:src="@{/image/login_naver.png}" alt="">
                     </a>
                 </div>
             </div>
             <div class="w-1/3" id="login_google">
-                <a class="flex justify-center" href="http://localhost:7070/oauth2/authorization/google">
+                <a class="flex justify-center" href="https://www.bookuluv.devh.me/oauth2/authorization/google">
                     <img class="w-[80px] h-[80px]" th:src="@{/image/login_google.png}" alt="">
                 </a>
             </div>
