국내, 해외 도서 DB 리스트화

--- a/src/main/resources/templates/order/detail.html
+++ b/src/main/resources/templates/order/detail.html
@@ -45,7 +45,7 @@
         const requestJson = {
             "amount": amount,
             "orderId": "sample-" + orderId,
-            "orderName": "토스 티셔츠 외 2건",
+            "orderName": orderName,
             "successUrl": successUrl,
             "failUrl": failUrl,
             "cardCompany": null,
