--- a/src/main/resources/templates/member/updateProfile.html
+++ b/src/main/resources/templates/member/updateProfile.html
@@ -283,6 +283,7 @@
                       document.getElementById("sample4_roadAddress").readOnly = true;
                       document.getElementById("sample4_jibunAddress").readOnly = true;
                       document.getElementById("sample4_extraAddress").readOnly = true;
+                      document.getElementById("sample4_postcode").readOnly = true;
                       var guideTextBox = document.getElementById("guide");
                       // 사용자가 '선택 안함'을 클릭한 경우, 예상 주소라는 표시를 해준다.
                       if (data.autoRoadAddress) {
@@ -308,19 +309,6 @@
                     <input class="btn btn-primary" type="submit" value="회원정보 수정 완료">
                 </div>
             </form>
-<!--            &lt;!&ndash; 회원탈퇴 &ndash;&gt;-->
-<!--            <section class="section section-profile flex-grow flex flex-col items-center justify-center">-->
-<!--                <div class="max-w-md w-full px-2 pt-4">-->
-<!--                    <h1 class="font-bold text-lg">-->
-<!--                        <i class="fa-solid fa-trash-can"></i>-->
-<!--                        회원탈퇴-->
-<!--                    </h1>-->
-<!--                    <form th:action="@{/member/delete}" method="post">-->
-<!--                        <button type="submit" class="btn btn-danger">회원탈퇴</button>-->
-<!--                    </form>-->
-<!--                </div>-->
-<!--            </section>-->
-            <!-- 회원탈퇴 -->
             <section class="section section-profile flex-grow flex flex-col items-center justify-center">
                 <div class="max-w-md w-full px-2 pt-4">
                     <h1 class="font-bold text-lg">
