--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -21,22 +21,22 @@
         <div class="admin_menu flex space-x-4">
           <ul class="flex space-x-4">
             <li>
-              <a href="@{/admin/adminUser}" class="menu-link">회원관리</a>
+              <a th:href="@{/admin/member}" class="menu-link">회원관리</a>
             </li>
             <li>
-              <a href="@{/admin/adminAuthor}" class="menu-link">작가관리</a>
+              <a th:href="@{/admin/author}" class="menu-link">작가관리</a>
             </li>
             <li>
-              <a href="@{/admin/adminNotice}" class="menu-link">공지사항 관리</a>
+              <a th:href="@{/admin/notice}" class="menu-link">공지사항 관리</a>
             </li>
             <li>
-              <a href="@{/admin/adminAriticle}" class="menu-link">판매 글 관리</a>
+              <a th:href="@{/admin/article}" class="menu-link">판매 글 관리</a>
             </li>
             <li>
-              <a href="@{/admin/adminProduct}" class="menu-link">도서관리</a>
+              <a th:href="@{/admin/product}" class="menu-link">도서관리</a>
             </li>
             <li>
-              <a href="@{/admin/adminCalculate}" class="menu-link">정산관리</a>
+              <a th:href="@{/admin/calculate}" class="menu-link">정산관리</a>
             </li>
           </ul>
         </div>
