--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -35,6 +35,7 @@
             }
         };
 
+
     </script>
 </head>
 
@@ -109,14 +110,15 @@
                      th:unless="${#authentication.principal.imgFilePath}"/>
                 <span class="ml-[2px]">
                 </span>
-                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}" th:text="${#authentication.principal.nickName + ' 님'}">
+                <span class="ml-[2px] hidden lg:block items-center" th:if="${#authentication.principal.nickName}"
+                      th:text="${#authentication.principal.nickName + ' 님'}">
                 </span>
             </a>
             <a href="/admin/list" class="inline-flex items-center">
                 <span class="ml-[2px] hidden lg:block items-center">
                     관리자페이지
                   </span>
-              </a>
+            </a>
             <a href="/notice/list" class="inline-flex flex-shrink-0">
                 <span class="ml-[2px]">
                     공지사항
@@ -148,7 +150,7 @@
         <nav class="flex flex-col md:flex-row md:justify-between">
             <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
                 <div>
-                    <img class="w-[100px]" src="https://i.imgur.com/9qCFLjc.png"  alt="">
+                    <img class="w-[100px]" src="https://i.imgur.com/9qCFLjc.png" alt="">
                 </div>
 
                 <div class="ml-[20px] text-white">
@@ -157,7 +159,7 @@
                         <span>고우영</span>
                     </div>
                     <div class="mb-[10px]">
-                      
+
                         <span>이메일 : wooyoung0407@naver.com</span>
 
                     </div>
@@ -172,7 +174,7 @@
 
             <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around mx-[10px]">
                 <div>
-                    <img class="w-[100px]" src="https://i.imgur.com/EgByDhq.jpg"  alt="">
+                    <img class="w-[100px]" src="https://i.imgur.com/EgByDhq.jpg" alt="">
                 </div>
                 <div class="ml-[20px] text-white">
 
@@ -182,7 +184,7 @@
                     <div class="mb-[10px]">
 
                         <span>이메일 : wooyoung0407@naver.com</span>
-                      
+
                     </div>
                     <div class="mb-[10px]">
                         <span>박창규</span>
@@ -195,9 +197,9 @@
 
             <div class="flex md:flex-row gap-x-36 md:gap-x-0 justify-around">
                 <div>
-                    <img class="w-[100px]" src="https://i.imgur.com/Q42WfBv.png"  alt="">
+                    <img class="w-[100px]" src="https://i.imgur.com/Q42WfBv.png" alt="">
                 </div>
-              
+
                 <div class="ml-[20px] text-white">
 
                     <div class="mb-[10px]">
@@ -233,6 +235,7 @@
         }
         return true;
     }
+
 
 </script>
 </body>
