--- a/src/main/resources/templates/product/domestic_list.html
+++ b/src/main/resources/templates/product/domestic_list.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html layout:decorate="~{layout/layout.html}">
+<html layout:decorate="~{layout/layout.html}" xmlns:th="http://www.w3.org/1999/xhtml"
+      xmlns:layout="http://www.w3.org/1999/xhtml">
 
 <head>
     <title>BOOKU_LUV 도서 목록</title>
@@ -9,52 +10,80 @@
 <div class="text-center mt-[50px]">
     <span class="text-[50px] font-bold">국내 도서</span>
 </div>
-<div th:if="${domestic}" class="flex justify-center items-center">
+
+<!-- 검색 창과 검색 버튼 -->
+<div class="flex justify-end mt-4">
+    <input class="border p-2 rounded" id="search_kw" placeholder="검색어를 입력하세요" type="text">
+    <button class="bg-blue-500 text-white px-4 py-2 ml-2 rounded" id="btn_search">검색</button>
+</div>
+
+<!-- 국내 도서 목록 -->
+<div class="flex justify-center items-center" th:if="${domestic}">
     <div class="my-10">
         <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 lg:grid-cols-4 xl:grid-cols-5 gap-6 mt-8">
-            <div th:each="product : ${domestic}" class="flex flex-col mx-auto w-80 p-4">
+            <!-- 도서 정보 표시 -->
+            <div class="flex flex-col mx-auto w-80 p-4" th:each="product : ${domestic}">
                 <div class="text-center">
-                    <a th:href="@{|/product/domestic/detail/${product.id}|}" class="block text-lg font-semibold my-4">
-                        <img class="mx-auto w-48 h-72" th:src="${product.coverImg}" alt="Book Cover">
-                        <span class="block text-lg font-semibold my-4"
-                              th:text="${product.title}"></span></a>
-                    <span th:text="${product.author}" class="block text-gray-600 mb-2"></span>
-                    <span th:text="${product.publisher}" class="block text-gray-600 mb-2"></span>
+                    <a class="block text-lg font-semibold my-4" th:href="@{|/product/domestic/detail/${product.id}|}">
+                        <img alt="Book Cover" class="mx-auto w-48 h-72" th:src="${product.coverImg}">
+                        <span class="block text-lg font-semibold my-4" th:text="${product.title}"></span></a>
+                    <span class="block text-gray-600 mb-2" th:text="${product.author}"></span>
+                    <span class="block text-gray-600 mb-2" th:text="${product.publisher}"></span>
                     <div class="mt-2">
                         <span class="text-gray-500">정가 : </span>
-                        <span th:text="${product.priceStandard}" class="line-through text-gray-500"></span>
+                        <span class="line-through text-gray-500" th:text="${product.priceStandard}"></span>
                         <span class="text-gray-500">할인가 : </span>
-                        <span th:text="${product.priceSales}" class="text-green-600"></span>
+                        <span class="text-green-600" th:text="${product.priceSales}"></span>
                     </div>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!--<div class="mt-8 flex justify-center">-->
-<!--    <ul class="pagination">-->
-<!--        <li class="{{ #paging.hasPrevious ? '' : 'disabled' }}">-->
-<!--            <a th:if="${paging.hasPrevious}" th:href="@{|/domestic/list?page=${paging.number - 1}&kw=${kw}|}"-->
-<!--               class="px-3 py-2 rounded-lg border">이전</a>-->
-<!--        </li>-->
-<!--        <li class="{{ #paging.hasPrevious ? '' : 'disabled' }}">-->
-<!--            <a th:if="${paging.hasPrevious}" th:href="@{|/domestic/list?page=${paging.number - 1}&kw=${kw}|}"-->
-<!--               class="px-3 py-2 rounded-lg border">&lt;</a>-->
-<!--        </li>-->
-<!--        <li th:each="pageNumber : ${#numbers.sequence(0, paging.totalPages - 1)}"-->
-<!--            class="{{ paging.number == pageNumber ? 'active' : '' }}">-->
-<!--            <a th:href="@{|/domestic/list?page=${pageNumber}&kw=${kw}|}" th:text="${pageNumber + 1}"-->
-<!--               class="px-3 py-2 rounded-lg border"></a>-->
-<!--        </li>-->
-<!--        <li class="{{ #paging.hasNext ? '' : 'disabled' }}">-->
-<!--            <a th:if="${paging.hasNext}" th:href="@{|/domestic/list?page=${paging.number + 1}&kw=${kw}|}"-->
-<!--               class="px-3 py-2 rounded-lg border">&gt;</a>-->
-<!--        </li>-->
-<!--        <li class="{{ #paging.hasNext ? '' : 'disabled' }}">-->
-<!--            <a th:if="${paging.hasNext}" th:href="@{|/domestic/list?page=${paging.totalPages - 1}&kw=${kw}|}"-->
-<!--               class="px-3 py-2 rounded-lg border">다음</a>-->
-<!--        </li>-->
-<!--    </ul>-->
-<!--</div>-->
+
+<!-- 페이지네이션 -->
+<div th:if="${!domestic.isEmpty()}">
+    <div class="flex justify-center mt-4">
+        <ul class="flex list-reset border border-gray-300 rounded">
+            <li class="page-item px-3 py-2 bg-gray-100 hover:bg-gray-200" th:classappend="${!domestic.hasPrevious()} ? 'disabled'">
+                <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${domestic.number}">
+                    <span>이전</span>
+                </a>
+            </li>
+            <li class="page-item px-3 py-2 hover:bg-gray-200"
+                th:classappend="${page == domestic.number+1} ? 'active'"
+                th:each="page: ${#numbers.sequence(1, domestic.totalPages)}"
+                th:if="${page >= domestic.number-5 and page <= domestic.number+5}">
+                <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${page}" th:text="${page}"></a>
+            </li>
+            <li class="page-item px-3 py-2 hover:bg-gray-200" th:classappend="${!domestic.hasNext()} ? 'disabled'">
+                <a class="page-link block text-center" href="javascript:void(0)" th:data-page="${domestic.number+2}">
+                    <span>다음</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</div>
+<form id="searchForm" method="get" th:action="@{/product/domestic/list}">
+    <input id="kw" name="kw" th:value="${kw}" type="hidden">
+    <input id="page" name="page" th:value="${domestic.number}" type="hidden">
+</form>
+
+<script layout:fragment="script" type="text/javascript">
+    const page_elements = document.getElementsByClassName("page-link");
+    Array.from(page_elements).forEach(function(element) {
+        element.addEventListener('click', function() {
+            document.getElementById('page').value = this.dataset.page;
+            document.getElementById('searchForm').submit();
+        });
+    });
+    const btn_search = document.getElementById("btn_search");
+    btn_search.addEventListener('click', function() {
+        document.getElementById('kw').value = document.getElementById('search_kw').value;
+        document.getElementById('page').value = 1;
+        document.getElementById('searchForm').submit();
+    });
+</script>
 </body>
+
 </html>
